--- a/actaimages.html
+++ b/actaimages.html
@@ -113,7 +113,7 @@
 								let header = document.createElement("h2");
 								let date = new Date(xmlhttp.getResponseHeader("last-modified"));
 								header.innerText = "last-modified: " + date.toLocaleString("arab", {timeZone: "America/Tegucigalpa", timeZoneName: "short"});
-								thisImage.parentNode.insertBefore(header, thisImg);
+								thisImg.parentNode.insertBefore(header, thisImg);
 							}
 						}
 						xmlhttp.send(); 
